# arquitectura-hexagonal-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: apps.py  dependencies_container.py  models.py  urls.py
app/aplicacion/domain/model/: vote_for_article_result.py  voting_user.py
app/aplicacion/port/api/: guardar_usuario_voto_port.py
app/aplicacion/port/spi/: find_voting_user_port.py  save_voting_user_port.py
app/aplicacion/service/: rating_articulo_service.py
app/migrations/: 0001_initial.py
backEnd/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backEnd/backEnd/: settings.py  urls.py
reddit_clone/: __init__.py  apps.py  dependencies.py  models.py  urls.py  views.py
reddit_clone/migrations/: 0001_initial.py
reddit_clone/src/application/entities/: article_entity.py  user_entity.py
reddit_clone/src/application/mappers/: __init__.py  article_mapper.py
reddit_clone/src/application/models/: article.py
reddit_clone/src/application/services/: __init__.py  article_service.py
reddit_clone/src/application/usecases/: __init__.py  publish_article_usecase.py  read_articles_usecase.py  vote_usecase.py
reddit_clone/src/domain/errors/: __init__.py  article_not_found_error.py  format_error.py
reddit_clone/src/domain/models/: __init__.py  article.py  user.py  vote.py  vote_type.py
reddit_clone/src/infrastructure/config/: apps.py  dependencies.py  exception_handler.py  exceptions_handler.py  urls.py
reddit_clone/src/infrastructure/dtos/: __init__.py  vote_dto.py
(+36 files in other folders)
