[tool.poetry]
name = "taller"
version = "0.1.0"
description = ""
authors = ["juan pablo sanchez gaitan <juansanchezg@javeriana.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.14.0"
django-rest-enumfield = "^0.2.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
